  GDataObjects by comparing only object pointers, not the underlying XML.

- To improve parsing performance, GDataObject extension declarations are cached
  rather than duplicated in each object.

- To reduce memory usage, GDataObject extensions are stored in arrays only
  when there is more than one instance of an extension class.

- GDataOrganization setters now filter out empty string org names and titles.

- Contacts sample updated to optionally fetch only the MyContacts group.

Bugs Fixed

- Fixed leak in -keepChildXMLElementsForElement (thanks alexkac)

- GDataXMLNode now consistently returns cached copies of child elements
  and attributes rather than duplicate copies.
  
- Fixed possibiilty of If-modified-since header being added to http deletes


Release 1.6.0
30-January-2009
Changes since 1.5.0

Additions

- Added -setShouldServiceFeedsIgnoreUnknowns to service classes, allowing
  for faster feed parsing on iPhone by ignoring unexpected XML, but requiring
  that entries from such feeds must be individually fetched by the client 
  before being updated.
  
- Added GDataServerError, representing error responses from services supporting
  structured errors.  On feed and entry fetch errors, a GDataServerErrorGroup
  will be available from the NSError object's userInfo dictionary
  with the key kGDataStructuredErrorsKey.
  
- Added explanatory server error text as NSLocalizedFailureReasonErrorKey to
  server-generated NSErrors so that logged errors are more useful.
  
- Added Optional group to project common sources to more easily identify
  non-service specific sources which may be omitted. ACL classes are now
  optional.  Media classes are now required only for YouTube and Photos classes.
  
- Added service document query parameter and classes for introspection
  of feed capabilities

- Added query parameters prettyprint, protocolVersion, language

- Updated YouTube, DocList, and Spreadsheet APIs for GData v2, and Spreadsheet